--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -13,6 +13,16 @@
     <link rel="canonical" href="{{ theme_canonical_url }}{{ pagename }}.html"/>
   {% endif %}
   <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-668344441"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1RS825S6VJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-1RS825S6VJ');
+    </script>
 {% endblock %}
 
 {# top+bottom related navs; we also have our own in sidebar #}
