update k8s functions text

--- a/source/_templates/navigation.html
+++ b/source/_templates/navigation.html
@@ -73,7 +73,7 @@
         <a href="K8sFunctions.html">
             {%- if pagename == "K8sFunctions" %}
             <strong>
-                K8sFunctions
+                K8s functions library
             </strong>
             {%- else %}
                 K8sFunctions
