--- a/source/_templates/navigation.html
+++ b/source/_templates/navigation.html
@@ -76,7 +76,7 @@
                 K8s functions library
             </strong>
             {%- else %}
-                K8sFunctions
+                K8s functions library
             {%- endif %}
         </a>
     </li>
